--- a/host_app/static/css/hostingroom.css
+++ b/host_app/static/css/hostingroom.css
@@ -1,4 +1,6 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     color: white;
 }
@@ -6,12 +8,199 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #1e1e1e;
+    background-color: #2B2B2B;
 }
 
-.room-info {
+#QandR {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: calc(100% - 240px);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    gap: 50px;
+}
+#question {
+    width: 100%;
+    height: 265px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 28px;
+    background-color: #383838;
+    border-radius: 10px;
+}
+#answerDiv {
     position: relative;
-    width: calc(100% - 220px);
-    left: 220px;
-    top: 46px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 305px;
+    gap: 10px;
+}
+.answerv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #454545;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+#room {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 23vw;
+    padding: 15px;
+    gap: 10px;
+    background-color: #1A1A1A;
+    border-radius: 10px;
+}
+
+.how-to-join {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+}
+.how-to-join div {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    background-color: #9C47FF;
+    border-radius: 45px;
+}
+.how-to-join div h3 {
+    font-size: 28px;
+    font-weight: 600;
+}
+.how-to-join h4 {
+
+    font-weight: 600;
+    font-size: 20px;
+
+    color: #9BA1AD;
+}
+.how-to-join button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+#room a {
+    text-decoration: none;
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+}
+#room a:hover {
+    text-decoration: underline;
+}
+#codeDisplay {
+    font-size: 40px;
+    letter-spacing: 0.4em;
+}
+#start-quiz {
+    width: 100%;
+    padding: 15px;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    background-color: #9C47FF;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+.participants {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: #202020;
+    width: 240px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    gap: 20px;
+}
+#users {
+    list-style-type: none;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+}
+li{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    
+}
+.check_mark{
+    width: 20px;
+}
+.bottom-box {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    width: 195px;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 10px 20px;
+    align-items: center;
+    justify-content: center;
+    background-color: #434343;
+    z-index: 10;
+    border-radius: 10px;
+}
+#timeControl {
+    width: 100%;
+    display: flex;
+    gap: 8px;
+}
+#timer {
+    width: 50px;
+}
+#timerDiv {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+#timerIMG {
+    width: 40px;
+}
+#timerText {
+    font-size: 32px;
+}
+.controlers {
+    width: 100%;
+    height: 30px;
+    background-color: white;
+    color: black;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: 500;
+}
+.controlers img {
+    height: 10px;
 }
