--- a/library_app/static/css/library.css
+++ b/library_app/static/css/library.css
@@ -141,6 +141,7 @@ textarea:focus, input:focus{
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
     border: 0;
     cursor: pointer;
+    text-decoration: none;
 
 }
 
