--- a/library_app/static/css/create_quiz.css
+++ b/library_app/static/css/create_quiz.css
@@ -337,6 +337,7 @@ form {
 
 .type-questions{
     display: flex;
+    width: 720px;
     flex-direction: row;
     justify-content: start;
     align-items: start;
@@ -353,7 +354,7 @@ form {
     gap: 10px;
     padding: 10px;
     width: 340px;
-    height: 45px;
+    height: 50px;
     font-weight: 300;
     border: none;
     cursor: pointer;
@@ -363,7 +364,7 @@ form {
 .type-request img{
     height: 100%;
     background-color: #9C47FF;
-    padding: 4px;
+    padding: 2px;
     border-radius: 5px;
 
 }
@@ -630,4 +631,18 @@ hr {
 #SaveAndExit img{
     width: 22px;
     height: 22px;
+}
+.backwood {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    padding: 4px;
+    justify-items: center;
+}
+.backwood img {
+    width: 100%;
+    height: 100%;
 }
