--- a/reports_app/templates/detail_report.html
+++ b/reports_app/templates/detail_report.html
@@ -36,6 +36,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="sort-data">
+                    <p>Ім'я</p>
+                    <div>
+                        <p>Точність</p>
+                    </div>
+                </div>
                 <div id="studentsContainer">
                     {% for student in report %}
                         <div class="student-card" data-student-id="{{ student.participant_id }}">
