--- a/execution_app/static/css/summary.css
+++ b/execution_app/static/css/summary.css
@@ -20,7 +20,9 @@
     margin: 0;
 }
 
-
+::-webkit-scrollbar {
+    display: none;
+}
 body {
     background-color: #2b2b2b;
     display: flex;
@@ -177,4 +179,57 @@ header img {
 .answersCorrWron div span {
     color: #B26FFF;
     font-weight: 500;
+}
+
+.questions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    width: 860px;
+    padding: 15px;
+    gap: 10px;
+    border-radius: 15px;
+    background-color: #353535;
+    margin-bottom: 20px;
+}
+.question {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    gap: 20px;
+    width: 97%;
+    background-color: #323232;
+    border-radius: 5px;
+}
+.question h3{
+    font-size: 24px;
+    font-weight: 400;
+}
+.question h4{
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.correct{
+    border-top: #22CE00 4px solid;
+}
+
+.wrong{
+    border-top: #F03C39 4px solid;
+}
+
+.answers{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.points{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    font-size: 24px;
+    font-weight: 400;
 }
