--- a/execution_app/templates/student_report.html
+++ b/execution_app/templates/student_report.html
@@ -73,30 +73,43 @@
                 </div>
             </div>
         </div>
-        {% for q in questions %}
-        <div class="question {{ 'correct' if q.is_correct else 'wrong' }}">
-            <h3>Вопрос №{{ loop.index }}: {{ q.text }}</h3>
-            
-            <p>Твой ответ: 
-                {% if q.type == "enter answer" %}
-                    {{ q.your_answer }}
-                {% else %}
-                    {% for answer1 in q.your_answer %}
-                        {{ answer1 }}, 
-                    {% endfor %}
-                {% endif %}
-            </p>
-            <!--  -->
-            <p>Правильный ответ: 
-                {% if q.type == "enter answer" %}
-                    {{ q.correct_answer }}
-                {% else %}
-                    {% for answer in q.correct_answer %}
-                        {{ answer }},     
-                    {% endfor %}
-                {% endif %}</p>
-            <p>{% if q.is_correct %} ✅ Правильно {% else %} ❌ Неправильно {% endif %}</p>
+        <div class="questions">
+            {% for q in questions %}
+            <div class="question {{ 'correct' if q.is_correct else 'wrong' }}">
+                <h3>Запитання №{{ loop.index }}:</h3>
+                <h4>{{ q.text }}</h4>
+                <div class="answers">
+                    <p>
+                        Ваша відповідь: 
+                        {% if q.type == "enter answer" %}
+                            {{ q.your_answer }}
+                        {% elif q.type == "one answer" %}
+                            {% for answer1 in q.your_answer %}
+                                {{ answer1 }}
+                            {% endfor %}
+                        {% else %}
+                            {% for answer1 in q.your_answer %}
+                                {{ answer1 }}, 
+                            {% endfor %}
+                        {% endif %}
+                    </p>
+                    <p>
+                        Правильна відповідь: 
+                        {% if q.type == "enter answer" %}
+                            {{ q.correct_answer }}
+                        {% elif q.type == "one answer" %}
+                            {% for answer in q.correct_answer %}
+                                {{ answer }}   
+                            {% endfor %}
+                        {% else %}
+                            {% for answer in q.correct_answer %}
+                                {{ answer }},   
+                            {% endfor %}
+                        {% endif %}</p>
+                </div>
+                <p class="points">{% if q.is_correct %}1/1{% else %}0/1{% endif %}</p>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </body>
 </html>
