--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -192,50 +192,100 @@
     background-color: #F03C39;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 999;
+.show {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+    flex-direction: column;
+    align-items: center;
+    width: 760px;
+    background-color: #414141;
+    border-radius: 15px;
+    padding: 20px 10px;
+    gap: 10px;  
+}
+.what-student h3 {
+    font-size: 24px;
+    font-weight: 300;
+}
+
+.line-between{
+    width: 100%;
+    height: 1px;
+    background-color: #696969;  
+}
+#modalAnswers{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+    max-height: 752px;
+    overflow-y: scroll;
+}
+.question{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    gap: 20px;
+    width: 100%;
+    background-color: #323232;
+    border-radius: 5px;
+}
+.question h3{
+    font-size: 24px;
+    font-weight: 400;
+}
+.question h4{
+    font-size: 20px;
+    font-weight: 300;
+}
+.correctQ{
+    border-top: #22CE00 4px solid;
+}
+.wrongQ{
+    border-top: #F03C39 4px solid;
+}
+
+.answers{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.points{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    font-size: 24px;
+    font-weight: 400;
+}
+#closeModal {
+    width: 152px;
+    height: 41px;
+    border-radius: 5px;
+    background-color: #B26FFF;
+    border: none;
+    cursor: pointer;
+}
+::-webkit-scrollbar {
+    background-color: #353535;
+    padding: 2px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #2b2b2b;
+    border-radius: 15px;
+    width: 2px;
+}
+#blur {
+    position: absolute;
     left: 0;
     top: 0;
+    z-index: 15;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.4);
-}
-
-.modal-content {
-    position: absolute;
-    bottom: -100%; 
-    left: 0;
-    width: 100%;
-    background: #fff;
-    padding: 20px;
-    border-radius: 12px 12px 0 0;
-    box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
-    transition: bottom 0.4s ease-in-out;
-    max-height: 80%;
-    overflow-y: auto;
-}
-
-.modal.show .modal-content {
-    bottom: 0;
-}
-.modal-answer {
-    color: black;
-}
-b {
-    color: black;
-}
-.close {
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    color: #333;
-}
-.close:hover {
-    color: red;
-}
-#modalAnswers {
-    color: black;
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(2.5px);
 }
