--- a/reports_app/static/css/reports.css
+++ b/reports_app/static/css/reports.css
@@ -31,69 +31,96 @@ header h2{
     gap: 15px;
     width: calc(100% - 220px);
 }
-.reports{
+
+.reports-main {
+    width: 1052px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    position: relative;
+    padding: 20px;
+    border-radius: 30px;
+    background-color: #3a3a3a;
 }
 
+.report img  {
+    width: 140px;
+    height: 64px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.reports-info {
+    width: 100%;
+    
+    border-radius: 20px;
+    border: 2px solid #2b2b2b;
+    overflow: hidden;
+}
+.titles {
+    width: 100%;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 190px;
+    padding-right: 60px;
+    background-color: #2b2b2b;
+}
+
+.reports {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 .report {
     width: 100%;
-    background-color: #404040;
-    border-radius: 10px;
+    height: 80px;
     display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 20px;
-    margin-bottom: 20px;
+    padding: 9px;
+    padding-left: 20px;
+    padding-right: 50px;
+    gap: 10px;
+    text-decoration: none;
 }
-.line {
-    height: 1px;
-    background-color: #666;
-    margin: 10px 0;
-}
-
-.info {
+.titleRoom {
     display: flex;
     align-items: center;
     gap: 5px;
 }
-
-.info div {
-    position: relative;
-    width: 25px;
+.titleRoom h3{
+    width: 505px;
+    font-size: 20px;
+    font-weight: 400;
+}
+.infoRoom {
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 3px;
-    background-color: #22CE00;
-    border-radius: 5px;
+    gap: 50px;
+    font-size: 20px;
+    font-weight: 500;
+}
+#rate {
+    width: 56px;
+    text-align: center;
+}
+#students {
+    width: 50px;
+    text-align: center;
+}
+#date1 {
+    width: 110px;
+    text-align: center;
 }
 
-.info div img{
-    width: 100%;
-}
-
-#fail{
-    background-color: rgb(223, 25, 25);
-}
-.information {
+.name-div {
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    align-items: center;
+    gap: 50px;
 }
-.delete-report{
-    position: absolute;
-    right: 20px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    
-}
-.delete-report img {
-    width: 30px;
+.info-div {
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 .hideform {
     visibility: hidden;
@@ -195,10 +222,4 @@ header h2{
     border: #B26FFF 2px solid;
     border-radius: 5px;
     cursor: pointer;
-}
-.preview {
-    width: 600px;
-    height: 240px;
-    object-fit: cover;
-    border-radius: 10px;
 }
